2008-12-10	Josh Saddler <nightmorph@gentoo.org>

	* panel-plugin/xfce-mixer-plugin.c, panel-plugin/xfce-plugin-dialog.c,
	  xfce4-mixer/xfce-mixer-controls-dialog.c,
	  xfce4-mixer/xfce-mixer-window.c, xfce4-mixer/xfce-mixer.c: Improve
	  strings as part of the string review process.

2008-11-11	Jannis Pohlmann <jannis@xfce.org>

	* == 4.5.92 released ==
	* configure.in.in: Bump version. Update dependencies.

2008-11-11	Jannis Pohlmann <jannis@xfce.org>

	* po/POTFILES.in: Remove xfce-mixer-stock.{c,h}.

2008-11-11	Jannis Pohlmann <jannis@xfce.org>

	* NEWS: Update NEWS file for the upcoming beta2 release.

2008-11-06	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/xfce-mixer-preferences.c: Use
	  xfconf_channel_reset_property() instead of
	  xfconf_channel_remove_property() which has been deprecated.

2008-11-06	Jannis Pohlmann <jannis@xfce.org>

	* icons/, libxfce4mixer/, panel-plugin/, xfce4-mixer/: Icons have been
	  renamed again. They're installed to $(pkgdatadir)/icons/hicolor now to
	  make them themeable. Remove the stock code.

2008-11-04	Jannis Pohlmann <jannis@xfce.org>

	* icons/, libxfce4mixer/xfce-mixer-stock.{c,h},
	  panel-plugin/xfce-volume-button.c: Rename volume status icons from
	  audio-volume-{00-06} to stock_xfce4-mixer-volume-{00-06} to avoid
	  possible conflicts with other packages.

2008-11-02	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-volume-button.c: Change step and page increment
	  size to 0.01 instead of 0.05. This allows for better fine-tuning of
	  the volume. Having a 5% step size has been annoying.

2008-11-01	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/*.{c,h}, panel-plugin/*.{c,h}, xfce4-mixer/*.{c,h}:
	  Update FSF address in the GPL license headers.

2008-10-31	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/*.{c,h}, panel-plugin/*.{c,h}, xfce4-mixer/*.{c,h}:
	  Fix license headers, use GPL instead of LGPL everywhere.

2008-10-19	Jannis Pohlmann <jannis@xfce.org>
