@@ -363,7 +363,9 @@ xfce_mixer_plugin_clicked (XfceMixerPlugin *mixer_plugin)
     {
       /* Generate error message and insert the current command */
       message = g_strdup_printf (_("Could not execute the command %s. "
-                                   "Perhaps the PATH variable needs adjustment."), 
+                                   "Ensure that either the location of the command "
+                                   "is included in the PATH environment variable or "
+                                   "the full path of the command is used."), 
                                  mixer_plugin->command);
 
       /* Display error */
@@ -392,9 +394,9 @@ xfce_mixer_plugin_configure (XfceMixerPlugin *mixer_plugin)
   /* Warn user if no sound cards are available */
   if (G_UNLIKELY (g_list_length (xfce_mixer_get_cards ()) <= 0))
     {
-      xfce_err (_("GStreamer was unable to detect any sound cards. "
+      xfce_err (_("GStreamer was unable to detect any sound devices. "
                   "Some sound system specific GStreamer packages may "
-                  "be missing. It may also be a permission problem."));
+                  "be missing. It may also be a permissions problem."));
     }
   else
     {
